# raily-ai-home-assignment

./: README.md
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  main.tsx
client/src/api/: bookmarks.repository.ts  factory.ts  index.ts  repository.ts
client/src/components/: add-bookmark-form.tsx  bookmark-card.tsx  bookmark-list.tsx  tag-badge.tsx
client/src/factories/: bookmark.factory.ts
client/src/hooks/: use-bookmarks.ts
client/src/types/: bookmark.ts  index.ts
server/: main.py  pyproject.toml
server/app/: config.py  database.py
server/app/api/: bookmarks.py  dependencies.py
server/app/models/: __init__.py  bookmark.py
server/app/repositories/: __init__.py  bookmark.py
server/app/schemas/: __init__.py  bookmark.py
server/app/services/: __init__.py  bookmark.py  metadata.py
